--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==4.2.16
 gunicorn==20.1.0
+pillow==10.4.0
 psycopg==3.2.2
+rawgpy==1.0.3
 sqlparse==0.5.1
 urllib3==1.26.20
 whitenoise==5.3.0
