--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,17 @@ cloudinary==1.41.0
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==4.2.16
+django-allauth==65.0.1
+django-cloudinary-storage==0.3.0
+django-extensions==3.2.3
 gunicorn==20.1.0
 pillow==10.4.0
 psycopg==3.2.2
+pydot==3.0.1
+pygraphviz==1.13
+pyparsing==3.1.4
+python-dotenv==1.0.1
 rawgpy==1.0.3
 sqlparse==0.5.1
 urllib3==1.26.20
 whitenoise==5.3.0
-python-dotenv
