--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ gunicorn==20.1.0
 pillow==10.4.0
 psycopg==3.2.2
 pydot==3.0.1
-pygraphviz==1.13
+# pygraphviz==1.13
 pyparsing==3.1.4
 python-dotenv==1.0.1
 rawgpy==1.0.3
